# cityapp

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  schema.py
app/routers/: cities.py
app/utils/: cities_utils.py
migrations/: env.py
migrations/versions/: 6fa8a075e2fe_.py  d5d95fe0bd20_.py
tests/: conftest.py  test_db.py
tests/routers/: test_cities.py
