[tool.poetry]
name = "cityapp"
version = "0.1.0"
description = ""
authors = ["Kirill Sinitsin <ks850471@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.112.0" }
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"
pytest = "^8.3.2"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"